# reliable-sentiment-signals

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
scripts/: 01_build_master_panel.py  02_run_sentiment.py
src/backtest/: __init__.py
src/calibration/: __init__.py
src/dashboard/: __init__.py
src/nlp/: __init__.py  inference.py  metrics.py  parse.py  prompt.py  runner.py
src/signals/: __init__.py
tests/: test_config.py  test_nlp.py
