[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-certainty-signals"
version = "0.1.0"
description = "Earnings-call transcript sentiment + LLM uncertainty signals for post-earnings drift."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.optional-dependencies]
data = [
    "yfinance>=0.2",
    "datasets>=2.18",
]
llm = [
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.27",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
